--- a/fooocus_colab.ipynb
+++ b/fooocus_colab.ipynb
@@ -52,7 +52,45 @@
             "Python 3.11.11 (main, Dec  4 2024, 08:55:07) [GCC 11.4.0]\n",
             "Fooocus version: 2.5.5\n",
             "Error checking version for torchsde: No package metadata was found for torchsde\n",
-            "Installing requirements\n"
+            "Installing requirements\n",
+            "[Cleanup] Attempting to delete content of temp dir /tmp/fooocus\n",
+            "[Cleanup] Cleanup successful\n",
+            "Downloading: \"https://huggingface.co/lllyasviel/misc/resolve/main/xlvaeapp.pth\" to /content/Fooocus/models/vae_approx/xlvaeapp.pth\n",
+            "\n",
+            "100% 209k/209k [00:00<00:00, 9.20MB/s]\n",
+            "Downloading: \"https://huggingface.co/lllyasviel/misc/resolve/main/vaeapp_sd15.pt\" to /content/Fooocus/models/vae_approx/vaeapp_sd15.pth\n",
+            "\n",
+            "100% 209k/209k [00:00<00:00, 6.65MB/s]\n",
+            "Downloading: \"https://huggingface.co/mashb1t/misc/resolve/main/xl-to-v1_interposer-v4.0.safetensors\" to /content/Fooocus/models/vae_approx/xl-to-v1_interposer-v4.0.safetensors\n",
+            "\n",
+            "100% 5.40M/5.40M [00:00<00:00, 45.4MB/s]\n",
+            "Downloading: \"https://huggingface.co/lllyasviel/misc/resolve/main/fooocus_expansion.bin\" to /content/Fooocus/models/prompt_expansion/fooocus_expansion/pytorch_model.bin\n",
+            "\n",
+            "100% 335M/335M [00:01<00:00, 240MB/s]\n",
+            "Downloading: \"https://huggingface.co/lllyasviel/fav_models/resolve/main/fav/juggernautXL_v8Rundiffusion.safetensors\" to /content/Fooocus/models/checkpoints/juggernautXL_v8Rundiffusion.safetensors\n",
+            "\n",
+            "100% 6.62G/6.62G [00:41<00:00, 169MB/s]\n",
+            "Downloading: \"https://huggingface.co/stabilityai/stable-diffusion-xl-base-1.0/resolve/main/sd_xl_offset_example-lora_1.0.safetensors\" to /content/Fooocus/models/loras/sd_xl_offset_example-lora_1.0.safetensors\n",
+            "\n",
+            "100% 47.3M/47.3M [00:00<00:00, 199MB/s]\n",
+            "Total VRAM 15095 MB, total RAM 12979 MB\n",
+            "Set vram state to: HIGH_VRAM\n",
+            "Always offload VRAM\n",
+            "Device: cuda:0 Tesla T4 : native\n",
+            "VAE dtype: torch.float32\n",
+            "Using pytorch cross attention\n",
+            "Refiner unloaded.\n",
+            "IMPORTANT: You are using gradio version 3.41.2, however version 4.44.1 is available, please upgrade.\n",
+            "--------\n",
+            "Running on local URL:  http://127.0.0.1:7865\n",
+            "Running on public URL: https://472da558b727c06a5a.gradio.live\n",
+            "\n",
+            "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n",
+            "model_type EPS\n",
+            "UNet ADM Dimension 2816\n",
+            "Using pytorch attention in VAE\n",
+            "Working with z of shape (1, 4, 32, 32) = 4096 dimensions.\n",
+            "Using pytorch attention in VAE\n"
           ]
         }
       ],
