--- a/fooocus_colab.ipynb
+++ b/fooocus_colab.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "VjYy0F2gZIPR",
         "colab": {
@@ -12,11 +12,8 @@
       },
       "outputs": [
         {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Collecting pygit2==1.15.1\n",
             "  Downloading pygit2-1.15.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (3.3 kB)\n",
@@ -45,7 +42,12 @@
             "Python 3.11.11 (main, Dec  4 2024, 08:55:07) [GCC 11.4.0]\n",
             "Fooocus version: 2.5.5\n",
             "Error checking version for torchsde: No package metadata was found for torchsde\n",
-            "Installing requirements\n"
+            "Installing requirements\n",
+            "[Cleanup] Attempting to delete content of temp dir /tmp/fooocus\n",
+            "[Cleanup] Cleanup successful\n",
+            "Downloading: \"https://huggingface.co/lllyasviel/misc/resolve/main/xlvaeapp.pth\" to /content/Fooocus/models/vae_approx/xlvaeapp.pth\n",
+            "\n",
+            "^C\n"
           ]
         }
       ],
